<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#353535"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/tv_background"
        android:textColor="@color/red"
        android:visibility="visible"
        android:textSize="17sp"
        android:gravity="start|top"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tvPreviousEquation"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/tv_background"
        android:textColor="#EEEEEE"
        android:visibility="visible"
        android:textSize="33sp"
        android:gravity="end|bottom"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/tvRightBottom"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/tv_background"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="end|bottom"
        android:padding="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ac"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnBin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="BIN"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnDec"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dec"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/dot"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal"
            android:textSize="20sp"
            android:layout_marginHorizontal="2dp"
            />

    </LinearLayout>

</LinearLayout>